fix notifications menu item overflow
https://app.asana.com/0/21937396631532/21632546647771

--- a/src/css/menu.less
+++ b/src/css/menu.less
@@ -68,20 +68,6 @@
     padding-bottom: 0px;
   }
 
-  .notification-count {
-    position: absolute;
-    top: 0px;
-    text-align: center;
-    left: 37px;
-    width: 16px;
-    background-color: #F00;
-    color: #FFF;
-    font-size: 10px;
-    padding-top: 1px;
-    border-radius: 16px;
-    height: 16px;
-  }
-
   .only-expanded {
     display: inline-block;
   }
